--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
        Remove this if you use the .htaccess -->
   <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><![endif]-->
 
-  <title></title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <title>Aaron Toth</title>
+  <meta name="description" content="The personal site of Aaron Toth">
+  <meta name="author" content="Aaron Toth">
 
   <!--  Mobile Viewport Fix
         j.mp/mobileviewport & davidbcalhoun.com/2010/viewport-metatag 
