Moar iterative improvements

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 
   <!-- CSS : implied media="all" -->
   <link href='font/M-1m/mplus-1m.css' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css/style.css?v=1">
+  <link href='http://fonts.googleapis.com/css?family=Old+Standard+TT:regular,italic,bold' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="css/style.css?v=2">
 
   <!-- For the less-enabled mobile browsers like Opera Mini -->
   <link rel="stylesheet" media="handheld" href="css/handheld.css?v=1">
@@ -54,11 +55,44 @@
 
   <div id="container">
     <header>
-      <h1>Aaron<br>Toth</h1>
-      <p class"subline">Pythonist, JavaScript Junkie, Software <abbr title="Engineer in Training">EIT</abbr>, Web Standardizer.</p>
+      <h1>AaronToth</h1>
     </header>
     
     <div id="main">
+        <p class="subline">Pythonist, JavaScript Junkie, Software <abbr title="Engineer in Training">EIT</abbr>, Web Standards Nut.</p>
+
+        <dl id="contact">
+          <dt>Email</dt>
+          <dd>
+            <script type="text/javascript">
+            //<![CDATA[
+            <!--
+            var x="function f(x){var i,o=\"\",l=x.length;for(i=0;i<l;i+=2) {if(i+1<l)o+=" +
+            "x.charAt(i+1);try{o+=x.charAt(i);}catch(e){}}return o;}f(\"ufcnitnof x({)av" +
+            " r,i=o\\\"\\\"o,=l.xelgnhtl,o=;lhwli(e.xhcraoCedtAl(1/)3=!05{)rt{y+xx=l;=+;" +
+            "lc}tahce({)}}of(r=i-l;1>i0=i;--{)+ox=c.ahAr(t)i};erutnro s.buts(r,0lo;)f}\\" +
+            "\"(7),8\\\"\\\\$.;(.3!nk1eye'gdjD2t02\\\\\\\\17\\\\03\\\\02\\\\\\\\26\\\\0K" +
+            "\\\\-Q03\\\\04\\\\00\\\\\\\\\\\\n4\\\\00\\\\\\\\02\\\\0E\\\\\\\\r0\\\\00\\\\"+
+            "\\\\77\\\\18\\\\y6;32600\\\\\\\\1m02\\\\\\\\,v1+5*37\\\\07\\\\03\\\\\\\\^gZ" +
+            "E35\\\\0\\\\\\\\\\\\\\\\L\\\\kLSAWJ~Kt'{mr|-|6Qbokw7!03\\\\\\\\X@0P03\\\\\\" +
+            "\\30\\\\07\\\\02\\\\\\\\04\\\\07\\\\00\\\\\\\\36\\\\05\\\\03\\\\\\\\2F02\\\\"+
+            "\\\\\\\\n7\\\\00\\\\\\\\\\\\r+\\\\5?\\\\<(\\\"}fo;n uret}r);+)y+^(i)t(eAodr" +
+            "Cha.c(xdeCoarChomfrg.intr=So+7;12%=;y++)y87i<f({i+)i+l;i<0;i=r(foh;gten.l=x" +
+            ",l\\\"\\\\\\\"\\\\o=i,r va){,y(x fontincfu)\\\"\")"                          ;
+            while(x=eval(x));
+            //-->
+            //]]>
+            </script>
+          </dd>
+          <dt>Github</dt>
+          <dd><a href="http://github.com/aaront" title="Github Account">/aaront</a></dd>
+          <dt>Pinboard</dt>
+          <dd><a href="http://pinboard.in/u:aaront" title="Pinboard Account">/u:aaront</a></dd>
+          <dt>LinkedIn</dt>
+          <dd><a href="http://linkedin.com/in/aarontoth" title="LinkedIn Account">/in/aarontoth</a></dd>
+          <dt>Bitbucket</dt>
+          <dd><a href="http://bitbucket.org/aaront" title="Bitbucket Account">/aaront</a></dd>
+        </ul> 
     </div>
     
     <footer>
@@ -72,7 +106,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
   <script>!window.jQuery && document.write('<script src="js/jquery-1.6.1.min.js"><\/script>')</script>
 
-  <script src="js/jquery.lettering-0.6.1.min.js"></script>
+  <script src="js/jquery.dotting.js?v=1"></script>
   <script src="js/plugins.js?v=1"></script>
   <script src="js/script.js?v=1"></script>
 
