One too many n's

--- a/pinnned/index.html
+++ b/pinnned/index.html
@@ -56,7 +56,7 @@
 
   <div class="container" id="top">
     <header class="constrained">
-      <h1>Pinnnned</h1>
+      <h1>Pinnned</h1>
       <p class="subline">A simple and lightweight social bookmarking client for the HP TouchPad.</p>
     </header>
   </div>
