--- a/pinnned/index.html
+++ b/pinnned/index.html
@@ -57,18 +57,18 @@
   <div class="container" id="top">
     <header class="constrained">
       <h1>Pinnned</h1>
-      <p class="subline">A simple and lightweight social bookmarking client for the HP TouchPad.</p>
+      <p class="subline">A <a href="#screenshots" title="See for yourself!">simple and lightweight</a> social bookmarking client for the HP TouchPad.</p>
     </header>
   </div>
 
   <div class="container constrained" id="main">
     <section class="buttons">
-      <a class="button" href="https://developer.palm.com/appredirect/?packageid=me.aaront.pinnned">Get Pinnned</a>
+      <a class="button" href="https://developer.palm.com/appredirect/?packageid=me.aaront.pinnned" title="Pinnned in the App Catalog">Get Pinnned</a>
       <div class="content-left">
-          <a class="button subbutton" href="http://getsatisfaction.com/aaron_toth/products/aaron_toth_pinnned">Questions or suggestions?</a>
+          <a class="button subbutton" href="http://getsatisfaction.com/aaron_toth/products/aaron_toth_pinnned" title="GetSatisfaction for Pinnned">Questions or suggestions?</a>
       </div>
       <div class="content-right">
-          <a class="button subbutton" href="#faq">Frequently Asked Questions</a>
+          <a class="button subbutton" href="#faq" title="FAQ">Frequently Asked Questions</a>
       </div>
       </section>
   </div>
@@ -81,7 +81,7 @@
 
     <p>Pinnned (not a typo) is meant to be a quick way to access your bookmarks. Whether you were browsing something at work and want to read it later or you want access to your favourite sites on the road, Pinnned will get you your content as soon as possible.</p>
 
-    <p>Pinnned features <a href="http://pinboard.in">Pinboard</a> and <a href="http://delicious.com">Delicious</a> support, with support for more services coming shortly.</p>
+    <p>Pinnned features <a href="http://pinboard.in" title="Pinboard">Pinboard</a> and <a href="http://delicious.com" title="Delicious">Delicious</a> support, with support for more services coming shortly.</p>
   </div>
 
   <div class="clearfix"></div>
@@ -108,7 +108,7 @@
       <dt>Is there a free version?</dt>
       <dd>Short answer: no. Long answer: No, but it's definitely an idea in the works. As the paid version gains more features, I may split off development and make a free version.</dd>
       <dt>This FAQ is too short</dt>
-      <dd>Yes, yes it is. The more questions and comments you <a href="http://getsatisfaction.com/aaron_toth/products/aaron_toth_pinnned">send in</a>, the more I can add here.</dd>
+      <dd>Yes, yes it is. The more questions and comments you <a href="http://getsatisfaction.com/aaron_toth/products/aaron_toth_pinnned" title="GetSatisfaction for Pinnned">send in</a>, the more I can add here.</dd>
     </dl>
   </div>
 
@@ -116,17 +116,17 @@
 
   <footer class="container constrained">
     <p>&copy; 2011 Aaron Toth.</p>
-    <p><a href="http://bitbucket.org/aaront/pinnned">Open source</a>, and licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache Licence, Verson 2.0</a></p>
+    <p><a href="http://bitbucket.org/aaront/pinnned">Open source</a>, and licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0.html" title="Apache License, version 2.0 text">Apache Licence, Verson 2.0</a></p>
   </footer>
 
   <div id="topbar">
     <div class="constrained container" id="topbar-inner">
-      <p class="topbar-left"><a href="http://aaront.me">&larr; Back</a></p>
-      <p class="topbar-right"><a href="#top">&uarr; To Top</a></p>
+      <p class="topbar-left"><a href="http://aaront.me" title="Back to aaront.me">&larr; Back</a></p>
+      <p class="topbar-right"><a href="#top" title="Navigate back to the top of the page">&uarr; To Top</a></p>
     </div>
   </div>
 
-  <a id="topbadge" href="https://developer.palm.com/appredirect/?packageid=me.aaront.pinnned">Pinnned is on sale for 99 cents USD!</a>
+  <a id="topbadge" href="https://developer.palm.com/appredirect/?packageid=me.aaront.pinnned" title="Pinnned in the App Catalog">Pinnned is on sale!</a>
 
 
   <!-- Javascript at the bottom for fast page loading -->
