final pinnned design? perhaps

--- a/pinnned/index.html
+++ b/pinnned/index.html
@@ -107,6 +107,26 @@
       <dd>Pinnned was conceived and built in a little under a month. The new Enyo framework is powerful, easy, and fun. New features will be added all the time, and if you buy now, you'll get them free of charge.</dd>
       <dt>Is there a free version?</dt>
       <dd>Short answer: no. Long answer: No, but it's definitely an idea in the works. As the paid version gains more features, I may split off development and make a free version.</dd>
+      <dt>Can I have a review copy?</dt>
+      <dd>Come on! You can't be that cheap! (But if you really do write reviews, you can give me a shout with your name and your website. All submissions are subject to my own discretion, so please don't abuse this. I can be reached at <script type="text/javascript">
+            //<![CDATA[
+            <!--
+            var x="function f(x){var i,o=\"\",l=x.length;for(i=0;i<l;i+=2) {if(i+1<l)o+=" +
+            "x.charAt(i+1);try{o+=x.charAt(i);}catch(e){}}return o;}f(\"ufcnitnof x({)av" +
+            " r,i=o\\\"\\\"o,=l.xelgnhtl,o=;lhwli(e.xhcraoCedtAl(1/)3=!05{)rt{y+xx=l;=+;" +
+            "lc}tahce({)}}of(r=i-l;1>i0=i;--{)+ox=c.ahAr(t)i};erutnro s.buts(r,0lo;)f}\\" +
+            "\"(7),8\\\"\\\\$.;(.3!nk1eye'gdjD2t02\\\\\\\\17\\\\03\\\\02\\\\\\\\26\\\\0K" +
+            "\\\\-Q03\\\\04\\\\00\\\\\\\\\\\\n4\\\\00\\\\\\\\02\\\\0E\\\\\\\\r0\\\\00\\\\"+
+            "\\\\77\\\\18\\\\y6;32600\\\\\\\\1m02\\\\\\\\,v1+5*37\\\\07\\\\03\\\\\\\\^gZ" +
+            "E35\\\\0\\\\\\\\\\\\\\\\L\\\\kLSAWJ~Kt'{mr|-|6Qbokw7!03\\\\\\\\X@0P03\\\\\\" +
+            "\\30\\\\07\\\\02\\\\\\\\04\\\\07\\\\00\\\\\\\\36\\\\05\\\\03\\\\\\\\2F02\\\\"+
+            "\\\\\\\\n7\\\\00\\\\\\\\\\\\r+\\\\5?\\\\<(\\\"}fo;n uret}r);+)y+^(i)t(eAodr" +
+            "Cha.c(xdeCoarChomfrg.intr=So+7;12%=;y++)y87i<f({i+)i+l;i<0;i=r(foh;gten.l=x" +
+            ",l\\\"\\\\\\\"\\\\o=i,r va){,y(x fontincfu)\\\"\")"                          ;
+            while(x=eval(x));
+            //-->
+            //]]>
+            </script>).</dd>
       <dt>This FAQ is too short</dt>
       <dd>Yes, yes it is. The more questions and comments you <a href="http://getsatisfaction.com/aaron_toth/products/aaron_toth_pinnned" title="GetSatisfaction for Pinnned">send in</a>, the more I can add here.</dd>
     </dl>
