--- a/pinnned/index.html
+++ b/pinnned/index.html
@@ -24,8 +24,8 @@
 
 
   <!-- Place favicon.ico and apple-touch-icon.png in the root of your domain and delete these references -->
-  <link rel="shortcut icon" href="/favicon.ico">
-  <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon.png">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="apple-touch-icon-precomposed" href="apple-touch-icon.png">
 
 
   <!-- CSS : implied media="all" -->
