--- a/pinnned/index.html
+++ b/pinnned/index.html
@@ -89,10 +89,10 @@
   <div id="screenshots">
     <h2 class="padded">See for yourself</h2>
     <ul id="screenshots-slider">
-      <li><img src="img/screenies/1.1/pinnned_search.png"></li>
-      <li><img src="img/screenies/1.1/pinnned_addaccount.png"></li>
-      <li><img src="img/screenies/1.1/pinnned_instapaper.png"></li>
-      <li><img src="img/screenies/1.1/pinnned_bytag.png"></li>
+      <li><img src="img/screenies/1.2/pinnned_main.png"></li>
+      <li><img src="img/screenies/1.2/pinnned_search.png"></li>
+      <li><img src="img/screenies/1.2/pinnned_prefs.png"></li>
+      <li><img src="img/screenies/1.2/pinnned_portrait.png"></li>
     </ul>
   </div>
 
